--- a/plone-4.3.x.cfg
+++ b/plone-4.3.x.cfg
@@ -1,4 +1,3 @@
-# https://github.com/kitconcept/buildout/blob/master/plone-4.3.x.cfg
 [buildout]
 extends =
     base.cfg
@@ -8,3 +7,6 @@ extends =
 [versions]
 pytz = 2017.3
 zope.interface = 4.1.0
+# fixes zlib failure: https://stackoverflow.com/questions/34631806/fail-during-installation-of-pillow-python-module-in-linux
+Pillow = 5.4.1
+docutils = 0.13.1
