--- a/versions.cfg
+++ b/versions.cfg
@@ -1,17 +1,19 @@
-
 [versions]
-# Don't use a released version of collective.embeddedpage
-collective.embeddedpage =
-
-# setuptools / buildout
+# Buildout
 setuptools =
 zc.buildout =
+zc.recipe.egg = 2.0.3
 
-# https://github.com/plone/plone.recipe.zope2instance/issues/37
+# Misc
 plone.recipe.zope2instance = 4.4.0
 
+# plone.recipe.varnish
+plone.recipe.varnish = 1.3
+
 # Release
-zest.releaser = 6.14.0
-docutils = 0.14
-twine = 1.10.0
+zest.releaser = 6.17.0
+twine = 1.11.0
 requests = 2.18.4
+towncrier = 19.2.0
+zestreleaser.towncrier = 1.1.0
+docutils = 0.13.1
