Pin configparser to 3.5.3

--- a/base.cfg
+++ b/base.cfg
@@ -47,7 +47,7 @@ environment = environment
 recipe = zc.recipe.egg
 eggs =
     ${test:eggs}
-    plone.app.robotframework[debug,ride,reload]
+    plone.app.robotframework[debug]
 
 
 [releaser]
