--- a/versions.cfg
+++ b/versions.cfg
@@ -7,6 +7,9 @@ zc.recipe.egg = 2.0.3
 # plone.recipe.varnish
 plone.recipe.varnish = 1.3
 
+# fixes Getting distribution for 'configparser'. assert newdist is not None  # newloc above is missing our dist?!
+configparser = 3.5.3
+
 # Code-analysis
 plone.recipe.codeanalysis = 3.0.1
 coverage = 3.7.1
