--- a/versions.cfg
+++ b/versions.cfg
@@ -10,6 +10,9 @@ plone.recipe.varnish = 1.3
 # fixes Getting distribution for 'configparser'. assert newdist is not None  # newloc above is missing our dist?!
 configparser = 3.5.3
 
+# fixes Error: The requirement ('Pygments>=2.5.1') is not allowed by your [versions] constraint (2.2.0)
+Pygments = 2.5.1
+
 # Code-analysis
 plone.recipe.codeanalysis = 3.0.1
 coverage = 3.7.1
