Pin Pygments 2.5.2 for Plone 5.0.

--- a/plone-5.0.x.cfg
+++ b/plone-5.0.x.cfg
@@ -4,3 +4,7 @@ extends =
     http://dist.plone.org/release/5.0.10/versions.cfg
     versions.cfg
 versions=versions
+
+[versions]
+# Error: The requirement ('Pygments>=2.5.1') is not allowed by your [versions] constraint (2.2.0)
+Pygments = 2.5.2
