--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 os: linux
 dist: xenial
 language: python
-python: "2.7"
+python:
+  - "2.7"
+  - "3.7"
 cache:
   pip: true
   directories:
@@ -12,6 +14,14 @@ env:
     - PLONE_VERSION=5.0.x
     - PLONE_VERSION=5.1.x
     - PLONE_VERSION=5.2.x
+jobs:
+  exclude:
+    - python: "3.7"
+      env: PLONE_VERSION=4.3.x
+      - python: "3.7"
+      env: PLONE_VERSION=5.0.x
+      - python: "3.7"
+      env: PLONE_VERSION=5.1.x
 before_install:
   - mkdir -p $HOME/buildout-cache/{eggs,downloads}
   - mkdir $HOME/.buildout
