--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
+os: linux
+dist: xenial
 language: python
 python: "2.7"
-sudo: required
 cache:
   pip: true
   directories:
     - $HOME/buildout-cache
 env:
-  matrix:
+  jobs:
     - PLONE_VERSION=4.3.x
     - PLONE_VERSION=5.0.x
     - PLONE_VERSION=5.1.x
+    - PLONE_VERSION=5.2.x
 before_install:
   - mkdir -p $HOME/buildout-cache/{eggs,downloads}
   - mkdir $HOME/.buildout
