Pin p.schema to version 1.2.0 for Plone 5.0.x

--- a/plone-5.0.x.cfg
+++ b/plone-5.0.x.cfg
@@ -8,3 +8,5 @@ versions=versions
 [versions]
 # Error: The requirement ('Pygments>=2.5.1') is not allowed by your [versions] constraint (2.2.0)
 Pygments = 2.5.2
+# Error: The requirement ('plone.schema>=1.2.0') is not allowed by your [versions] constraint (1.1.0)
+plone.schema = 1.2.0
