--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ install:
   - sed -ie "s#plone-x.x.x.cfg#plone-$PLONE_VERSION.cfg#" travis.cfg
   - buildout -t 10 -c travis.cfg
 script:
+  - if [ "$PLONE_VERSION" == "5.2.x" ] && [ $TRAVIS_PYTHON_VERSION == '3.7' ]; then pip install black && black src/ --check; fi
   - bin/code-analysis
   - bin/test
 after_success:
