--- a/base.cfg
+++ b/base.cfg
@@ -28,7 +28,9 @@ eggs =
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/src/collective
 flake8-exclude = bootstrap.py,bootstrap-buildout.py,docs,*.egg.,omelette
-flake8-max-complexity = 15
+flake8-max-complexity = 25
+flake8-ignore = E203, E266, E501, W503, E231
+flake8-max-line-length = 200
 
 
 [omelette]
