--- a/plone-4.3.x.cfg
+++ b/plone-4.3.x.cfg
@@ -28,3 +28,6 @@ pyrsistent = 0.15.7
 
 # Error: The requirement ('distlib<1,>=0.3.1') is not allowed by your [versions] constraint (0.3.0)
 distlib = 0.3.1
+
+# Error: The requirement ('virtualenv>=20.0.35') is not allowed by your [versions] constraint (20.0.26)
+virtualenv = 20.0.35
