--- a/plone-4.3.x.cfg
+++ b/plone-4.3.x.cfg
@@ -17,3 +17,6 @@ zipp = 0.5.2
 more-itertools = 5.0.0
 # Error: The requirement ('Pygments>=2.5.1') is not allowed by your [versions] constraint (2.2.0)
 Pygments = 2.5.2
+
+[versions:python27]
+PyJWT = 1.7.1
