Pin plone.schema

--- a/plone-4.3.x.cfg
+++ b/plone-4.3.x.cfg
@@ -18,6 +18,9 @@ more-itertools = 5.0.0
 # Error: The requirement ('Pygments>=2.5.1') is not allowed by your [versions] constraint (2.2.0)
 Pygments = 2.5.2
 
+# plone.restapi specific
+plone.schema = 1.2.0
+
 [versions:python27]
 PyJWT = 1.7.1
 pyroma = 2.6.1
