--- a/plone-5.1.x.cfg
+++ b/plone-5.1.x.cfg
@@ -11,6 +11,10 @@ zipp = 0.5.2
 # plone.restapi specific
 plone.schema = 1.2.0
 
+# last py2 compatible version
+PyJWT = 1.7.1
+pyroma = 2.6.1
+
 # zest.releaser
 zest.releaser = 6.20.1
 twine = 1.11.0
