--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,9 @@ graft src/collective
 graft docs
 include *.rst
 include *.png
+include *.jpeg
 include *.txt
 exclude Makefile
 exclude .Python
+exclude .flake8
 global-exclude *.pyc
