--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,56 +6,29 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.7]
-        plone-version: [5.2]
+        python: [3.7, 3.8, 3.9]
+        plone: ["6.0.0a3", "5.2.7"]
+        exclude:
+          - plone: "5.2-latest"
+            python: 3.9
 
     steps:
-
       # git checkout
       - uses: actions/checkout@v2
 
-      # python setup
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+      - name: Setup Plone ${{ matrix.plone }} with Python ${{ matrix.python }}
+        id: setup
+        uses: plone/setup-plone@v1.0.0
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
+          plone-version: ${{ matrix.plone }}
 
-      # python cache
-      - uses: actions/cache@v1
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      # python install
-      - run: pip install virtualenv
-      - run: pip install wheel
-      - name: pip install
-        run: pip install -r requirements.txt
-
-      # run pocompile for translation tests
-      - run: pip install zest.pocompile
-      - run: pocompile src
-
-      # choose Plone version
-      - name: choose Plone version
-        run: sed -ie "s#plone-x.x.x.cfg#plone-${{ matrix.plone-version }}.x.cfg#" ci.cfg
-
-      # buildout
-      - name: buildout
-        run: buildout -t 10 -c ci.cfg
-        env:
-          CI: true
-
-      # black
-      - name: black
-        run: if [ "${{ matrix.plone-version }}" == "5.2" ] && [ ${{ matrix.python-version }} == '3.7' ]; then pip install black[d] && black src/ --check; fi
-
-      # code analysis
-      - name: code analysis
-        run: bin/code-analysis
-
+      # Install collective.embeddedpage with test extras
+      - name: Install collective.embeddedpage
+        run: |
+          pip install -U pip
+          pip install ".[test]"
       # test
       - name: test
-        run: bin/test
+        run: |
+          zope-testrunner --auto-color --auto-progress --test-path src
