--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
         python: [3.7, 3.8, 3.9]
         plone: ["6.0.0a3", "5.2.7"]
         exclude:
-          - plone: "5.2-latest"
+          - plone: "5.2.7"
             python: 3.9
 
     steps:
