--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
       fail-fast: false
       matrix:
         python: [3.7, 3.8, 3.9]
-        plone: ["6.0.0a3", "5.2.7"]
+        plone: ["6.0.9", "5.2.7"]
         exclude:
           - plone: "5.2.7"
             python: 3.9
