--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ jobs:
         exclude:
           - plone: "5.2.7"
             python: 3.9
-
+          - plone: "6.0.9"
+            python: 3.7
     steps:
       # git checkout
       - uses: actions/checkout@v2
