--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
         exclude:
           - plone: "5.2.7"
             python: 3.9
+          - plone: "5.2.7"
+            python: 3.8
           - plone: "6.0.9"
             python: 3.7
     steps:
