--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
         plone: ["6.0.9", "5.2.7"]
         exclude:
           - plone: "5.2.7"
+            python: "3.10"
+          - plone: "5.2.7"
             python: 3.9
           - plone: "5.2.7"
             python: 3.8
