--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [3.7, 3.8, 3.9, "3.10"]
+        python: [3.7, 3.8, 3.9, "3.10", "3.11"]
+        python: [3.7, 3.8, 3.9]
         plone: ["6.0.9", "5.2.7"]
         exclude:
+          - plone: "5.2.7"
+            python: "3.11"
           - plone: "5.2.7"
             python: "3.10"
           - plone: "5.2.7"
